--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,15 @@
         android:theme="@style/Theme.RZapp"
         tools:targetApi="31">
         <activity
+            android:name=".UI.DetailBudget"
+            android:exported="false" />
+        <activity
+            android:name=".UI.AddBudget"
+            android:exported="false" />
+        <activity
+            android:name=".UI.MainActivity2"
+            android:exported="false" />
+        <activity
             android:name=".UI.registerActivity"
             android:exported="false" />
         <activity
